# moverox

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
crates/move-syn/: CHANGELOG.md  Cargo.toml  README.md
crates/move-syn/src/: functions.rs  lib.rs  tests.rs  vis.rs
crates/move-syn/src/functions/: mod.rs  signature.rs
crates/move-syn/src/tests/: mod.rs
crates/move-syn/src/tests/imports/: mod.rs  move_stdlib.rs  sui_framework.rs
crates/move-syn/src/tests/imports/snapshots/: move_syn__tests__imports__move_stdlib__macros.snap  move_syn__tests__imports__move_stdlib__string.snap  move_syn__tests__imports__move_stdlib__type_name.snap  move_syn__tests__imports__move_stdlib__uq64_64.snap  move_syn__tests__imports__sui_framework__accumulator.snap  move_syn__tests__imports__sui_framework__address.snap  move_syn__tests__imports__sui_framework__authenticator_state.snap  move_syn__tests__imports__sui_framework__balance.snap  move_syn__tests__imports__sui_framework__coin.snap  move_syn__tests__imports__sui_framework__deny_list.snap  move_syn__tests__imports__sui_framework__display.snap  move_syn__tests__imports__sui_framework__dynamic_object_field.snap  move_syn__tests__imports__sui_framework__event.snap  move_syn__tests__imports__sui_framework__hex.snap  move_syn__tests__imports__sui_framework__object.snap  move_syn__tests__imports__sui_framework__object_bag.snap  move_syn__tests__imports__sui_framework__package.snap  move_syn__tests__imports__sui_framework__party.snap  move_syn__tests__imports__sui_framework__pay.snap  move_syn__tests__imports__sui_framework__random.snap  move_syn__tests__imports__sui_framework__sui.snap  move_syn__tests__imports__sui_framework__table.snap  move_syn__tests__imports__sui_framework__table_vec.snap  move_syn__tests__imports__sui_framework__token.snap  move_syn__tests__imports__sui_framework__url.snap  move_syn__tests__imports__sui_framework__versioned.snap
crates/move-syn/tests/: deepbook.rs  enums.rs  functions.rs  legacy.rs  move-stdlib.rs  parse.rs  sui-framework.rs
crates/move-syn/tests/snapshots/: deepbook__balance_manager.snap  deepbook__book__book.snap  deepbook__book__fill.snap  deepbook__book__order.snap  deepbook__book__order_info.snap  deepbook__helper__big_vector.snap  deepbook__helper__constants.snap  deepbook__helper__math.snap  deepbook__helper__utils.snap  deepbook__order_query.snap  deepbook__pool.snap  deepbook__registry.snap  deepbook__state__account.snap  deepbook__state__balances.snap  deepbook__state__governance.snap  deepbook__state__history.snap  deepbook__state__state.snap  deepbook__state__trade_params.snap  deepbook__vault__deep_price.snap  deepbook__vault__vault.snap  enums__main_.snap  functions__sui_framework__address.snap  functions__sui_framework__authenticator_state.snap  functions__sui_framework__bag.snap  functions__sui_framework__balance.snap  functions__sui_framework__bcs.snap  functions__sui_framework__borrow.snap  functions__sui_framework__clock.snap  functions__sui_framework__coin.snap  functions__sui_framework__deny_list.snap  functions__sui_framework__display.snap  functions__sui_framework__dynamic_field.snap  functions__sui_framework__dynamic_object_field.snap  functions__sui_framework__event.snap  functions__sui_framework__hex.snap  functions__sui_framework__linked_table.snap  functions__sui_framework__math.snap  functions__sui_framework__object.snap  functions__sui_framework__object_bag.snap  functions__sui_framework__object_table.snap  (+74 more)
crates/moverox/: CHANGELOG.md  Cargo.toml  README.md
crates/moverox-build/: CHANGELOG.md  Cargo.toml  README.md
crates/moverox-build/src/: lib.rs  tests.rs
crates/moverox-build/src/snapshots/: moverox_build__tests__Enums.snap  moverox_build__tests__MoveStdLib.snap  moverox_build__tests__Sui.snap
crates/moverox-build/tests/: trybuild.rs
crates/moverox-build/tests/snapshots/: public_api__public_api.snap
crates/moverox-codegen/: CHANGELOG.md  Cargo.toml  README.md
crates/moverox-codegen/src/: attributes.rs  generics.rs  iter.rs  lib.rs  move_type.rs  named_fields.rs  positional_fields.rs  tests.rs
crates/moverox-codegen/src/move_enum/: mod.rs
crates/moverox-codegen/src/move_struct/: braced.rs  mod.rs  tuple.rs
crates/moverox-codegen/tests/snapshots/: public_api__public_api.snap
crates/moverox-sui/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/moverox-sui/move/: move-stdlib  sui-framework
crates/moverox-sui/move/sui-framework/: Move.toml
crates/moverox-sui/src/: lib.rs  sui_sdk.rs
crates/moverox-sui/tests/snapshots/: public_api__public_api.snap
crates/moverox-traits/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
crates/moverox-traits-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/moverox-traits-derive/src/: attributes.rs  datatype.rs  lib.rs  move_datatype.rs  move_struct.rs  type_tag.rs
crates/moverox-traits-derive/tests/: empty_tuple_struct.rs  otw.rs  tests.rs
crates/moverox-traits-derive/tests/snapshots/: public_api__public_api.snap
crates/moverox-traits-derive/tests/sources/: braced_struct.rs  empty_braced_struct.rs  empty_braced_struct.stderr  empty_enum.rs  empty_enum.stderr  empty_tuple_struct.stderr  enums.rs  generic_braced_struct.rs  generic_tuple_struct.rs  no_type_bounds.rs  struct_with_type_default.rs  tuple_struct.rs
crates/moverox-traits/src/: external.rs  lib.rs  primitives.rs  vector.rs
crates/moverox-traits/tests/: public-api.rs  type-tag-serde.rs
crates/moverox-traits/tests/snapshots/: public_api__public_api.snap
crates/moverox-types/: CHANGELOG.md  Cargo.toml  README.md
crates/moverox-types/src/: address.rs  ident_str.rs  lib.rs  u256.rs
crates/moverox-types/src/type_tag/: mod.rs  parse.rs  serialization.rs
crates/moverox-types/tests/: public-api.rs
crates/moverox-types/tests/snapshots/: public_api__public_api.snap
crates/moverox/src/: instance.rs  lib.rs  macros.rs  otw.rs
crates/moverox/tests/: parsing.rs
crates/moverox/tests/snapshots/: public_api__public_api.snap
move/: move-stdlib  pull-packages.sh  sui-framework
ops/: checks.sh  (+5 more)
(+10 files in other folders)
