[package]
description = "Move syntax parsing"
name        = "move-syn"
version     = "0.0.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { version = "1", public = true }
unsynn      = { version = "0.1", public = true }

regex = "1"

[dev-dependencies]
insta      = "1"
itertools  = "0.14"
testresult = "0.4"

public-api       = "0.49"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"
