[package]
description = "Move syntax parsing"
name        = "move-syn"
version     = "0.0.5-alpha.3"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

[lints]
workspace = true

[features]
fun-args = []

[dependencies]
proc-macro2 = { version = "1", public = true }
unsynn      = { version = "0.2", public = true }

cfg-if = "1"
regex  = "1"

[dev-dependencies]
derive_more = { version = "2", features = ["display"] }
insta       = "1"
itertools   = "0.14"
testresult  = "0.4"

public-api       = "0.50"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"
