[package]
description = "Build script utilities to oxidize an entire Move package"
name        = "moverox-build"
version     = "0.1.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[package.metadata.cargo-machete]
ignored = ["moverox"]

[lints]
workspace = true

[dependencies]
move-syn        = { version = "0.0.5-beta.2", path = "../move-syn" }
moverox-codegen = { version = "0.0.7", path = "../moverox-codegen" }

anyhow = "1"


[build-dependencies]
rustversion = "1"


[dev-dependencies]
indoc        = "2"
insta        = "1"
itertools    = "0.14"
prettyplease = "0.2"
syn          = { version = "2", default-features = false, features = ["parsing"] }
tempfile     = "3"
testresult   = "0.4"
trybuild     = { version = "1", features = ["diff"] }

moverox = { path = "../moverox" }

public-api       = "0.50"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"
