[package]
description = "Generate Rust code from Move IR parsed by move-syn"
name        = "moverox-codegen"
version     = "0.0.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
move-syn    = { version = "0.0.0", path = "../move-syn", public = true }
proc-macro2 = { version = "1", public = true }

quote  = "1"
sealed = "0.6"
unsynn = "0.1"


[dev-dependencies]
insta        = "1"
prettyplease = "0.2"
syn          = { version = "2", default-features = false, features = ["parsing"] }

public-api       = "0.49"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"
