[package]
description = "Generate Rust code from Move IR parsed by move-syn"
name        = "moverox-codegen"
version     = "0.0.11"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
move-syn    = { version = "0.0.7", path = "../move-syn", public = true }
proc-macro2 = { version = "1", public = true }

quote  = "1"
sealed = "0.6"
unsynn = "0.2"


[dev-dependencies]
indoc        = "2"
insta        = "1"
prettyplease = "0.2"
syn          = { version = "2", default-features = false, features = ["parsing"] }

public-api       = "0.50"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"

[build-dependencies]
rustversion = "1.0.22"
