[package]
description = "Oxidized Sui MoveStdlib and Sui packages."
name        = "moverox-sui"
version     = "0.0.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
moverox = { version = "0.0.0", path = "../moverox", public = true }


[build-dependencies]
moverox-build = { version = "0.0.0", path = "../moverox-build" }
