[package]
description = "Oxidized Sui Move framework packages and compatibility layer for `sui_sdk_types`"
name        = "moverox-sui"
version     = "0.0.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
sui-sdk = ["dep:sealed", "dep:sui-sdk-types"]

[dependencies]
moverox       = { version = "0.0.1", path = "../moverox", public = true }
sui-sdk-types = { version = "0.0.6", optional = true, public = true }

sealed = { version = "0.6", optional = true }


[build-dependencies]
moverox-build = { version = "0.0.1", path = "../moverox-build" }


[dev-dependencies]
insta            = "1"
public-api       = "0.49"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"
