[package]
description = "Derive macros for moverox-traits."
name        = "moverox-traits-derive"
version     = "0.0.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

autotests = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { version = "1", public = true }
syn         = { version = "2", public = true, features = ["clone-impls"] }

convert_case = "0.8"
deluxe       = "0.5"
quote        = "1"
rustversion  = "1"

[dev-dependencies]
moverox-traits = { path = "../moverox-traits", features = ["derive"] }
serde          = { version = "1", features = ["derive"] }
trybuild       = { version = "1", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/tests.rs"
