[package]
description = "Traits for rusty Move types and their type tags."
name        = "moverox-traits"
version     = "0.0.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
derive = ["dep:moverox-traits-derive", "dep:serde", "moverox-types/serde"]
serde  = ["serde/derive"]

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
moverox-traits-derive = { version = "0.0.1", optional = true, path = "../moverox-traits-derive", public = true }
moverox-types         = { version = "0.0.1", path = "../moverox-types", public = true }
serde                 = { version = "1", public = true, optional = true }


derive-where = { version = "1", optional = true }
serde_with   = { version = "3", optional = true }
thiserror    = "2"


[dev-dependencies]
insta            = "1"
public-api       = "0.49"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"

moverox-types = { path = "../moverox-types", features = ["serde"] }
