[package]
description = "Building blocks for oxidized Move types"
name        = "moverox-types"
version     = "0.0.4"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
proptest = ["dep:proptest", "dep:test-strategy"]
serde    = ["dep:serde_core", "dep:serde_with", "serde/derive"]

[dependencies]
proptest   = { version = "1", optional = true, public = true }
serde_core = { version = "1", optional = true, public = true }

const-hex = "1"
ref-cast  = "1"
thiserror = "2"
winnow    = "0.7"

serde         = { version = "1", optional = true }
serde_with    = { version = "3", optional = true }
test-strategy = { version = "0.4", optional = true }

# For U256
primitive-types = { version = "0.12", features = ["fp-conversion"] }
uint            = "0.9"


[dev-dependencies]
bcs        = "0.1"
serde_json = "1"

insta            = "1"
public-api       = "0.50"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"

[build-dependencies]
rustversion = "1.0.22"
