[package]
description = "Move, oxidized"
name        = "moverox"
version     = "0.0.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies.moverox-traits]
features = ["derive", "serde"]
path     = "../moverox-traits"
public   = true
version  = "0.0.0"

[dependencies.moverox-types]
features = ["serde"]
path     = "../moverox-types"
public   = true
version  = "0.0.0"

[dependencies.serde]
features = ["derive"]
public   = true
version  = "1"

[dev-dependencies]
insta            = "1"
public-api       = "0.49"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"
