[package]
description = "Move, oxidized"
name        = "moverox"
version     = "0.0.2"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
bcs = ["dep:bcs", "dep:thiserror"]

[dependencies.moverox-traits]
features = ["derive", "serde"]
path     = "../moverox-traits"
public   = true
version = "0.0.2"

[dependencies.moverox-types]
features = ["serde"]
path     = "../moverox-types"
public   = true
version = "0.0.2"

[dependencies.serde]
features = ["derive"]
public   = true
version  = "1"

[dependencies]
bcs       = { version = "0.1", optional = true }
thiserror = { version = "2", optional = true }

[dev-dependencies]
insta            = "1"
public-api       = "0.49"
rustdoc-json     = "0.9"
rustup-toolchain = "0.1"


[[test]]
name              = "parsing"
path              = "./tests/parsing.rs"
required-features = ["bcs"]
